--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <!-- Size should be 32 x 32 pixels -->
 
 
-    
+
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -48,34 +48,39 @@
             <li><%= link_to "Link2", "/path2"  %></li>
             <li><%= link_to "Link3", "/path3"  %></li>
           </ul>
+          <ul class="nav navbar-right col-md-4">
+
+            <% if current_user %>
+              <li class="col-md-8 user-name">
+              <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,
+                                                                edit_user_registration_path, title: 'Edit Profile' %>
+              </li>
+              <li class="col-md-1"> </li>
+              <li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,
+                                                    class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>
+            <% else %>
+            <li class="col-md-4 pull-right">
+              <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+            </li>
+            <% end %>
+          </ul>
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-      </div><!--/row-->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <%= bootstrap_flash %>
+        <%= yield %>
+      </div>
+    </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2020</p>
-      </footer>
+    <footer>
+      <p>&copy; Company 2020</p>
+    </footer>
 
-    </div> <!-- /container -->
+  </div> <!-- /container -->
 
   </body>
 </html>
